<resources>
    <string name="app_name">Pokemon Step Counter</string>
    <string name="pokeball">Pokeball</string>
    <string name="title">Title</string>
    <string name="steps">Steps</string>
    <string name="start_button">Start Button</string>
    <string name="stats_button">Stats Button</string>
    <string name="method">Method</string>
    <string name="chroma">Chroma charm</string>
    <string name="pkmn_name">Pokémon\'s name</string>
    <string name="version">Version</string>
    <string name="encounter">Encounter Manager</string>
    <string name="add_button">Add Button</string>
    <string name="chosen_version">Chosen Version</string>
    <string name="chosen_method">Chosen Method</string>
    <string name="pkmn_image">Pokemon Image</string>
    <string name="pkmn_chosen_name">Pokemon Name</string>
    <string name="pkmn_chosen_number">Pokemon Number</string>
    <string name="rate">Rate</string>
</resources>